# srws

./: Cargo.toml  LICENSE  README.md
config/: server.conf
src/: logging.rs  main.rs  responses.rs
static/: 404.html  index.html
