[package]
name = "rust-websocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"  # For timestamps in logs
env_logger = "0.9.0"  # Control logs via env vars
log = "0.4.17"  # Logging facility
rust-ini = "0.18.0"  # Parse INI config files
